FINERACT-2455: Add WC loan details business events